# ourobo-rs

./: .gitignore  Cargo.toml  README.md  deny.toml  lima-default.yaml  setup.sh
liburing-sys/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  build.rs  lib.rs  wrapper.h
src/: io_uring.rs  lib.rs
src/io_uring/: cq.rs  sq.rs  uring.rs
