[package]
name    = "ouroboros"
authors = ["Liam Baker <misguided.dev@protonmail.com>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[workspace.dependencies]
bindgen = "=0.69.4"

[dependencies]
bitflags     = "=2.5.0"
bytemuck     = {version = "=1.15.0", features = ["derive"]}
libc = "0.2.153"
liburing-sys = {version = "0.1.0", path = "liburing-sys"}
thiserror    = "1.0.58"
